src/app/shared/footer/footer.component.scss
@import "../../../styles/styles";

.partners-footer {
  background-color: #fff;
}

.title {
  display: inline-block;
  margin: 10px 0 5px 13px;
  color: #7d7d7d;
}

.partners ul, .partners li  {
  list-style: none;
  margin: 0;
  padding: 0;
}

.partners img {
  max-height: 25px;
}

.partners li {
  padding: 0 8px 13px 8px;
  display: inline-block;
}

.partners.front img {
  max-height: 50px;
}

.partners.front li {
  padding: 0 8px 25px 8px;
}

.info-footer{
  background: linear-gradient(to bottom right, $primary-6, $primary-7);
  box-shadow: inset 0 12px 12px -12px rgba(0,0,0,.2),
              inset 0 -12px 12px -12px rgba(0,0,0,.2);
  padding: $sp-7 $sp-4;
}

.info-footer-content {
  max-width: 1400px;
}

.info-footer-content > .d-flex > * {
  flex: 1;
  min-width: 300px;
  margin-right: $sp-3;
  padding: 8px 12px;
  padding-top: 12px;
  border-top: solid 6px rgba(#fff, .2);
  h3 {
    font-size: $fs-5;
    margin-top: 0;
    color: $primary-1;
  }
  p {
    color: $primary-1;
  }
  li {
    color: $primary-1;
  }
  a {
    color: $primary-3;
    &:hover {
      color: $primary-1;
    }
  }
}

.info-footer .header-image-info, .info-footer .header-image-info > a {
  color: $primary-4;
}

:host ::ng-deep laji-feedback a {
  color: $primary-3;
  &:hover {
    color: $primary-1;
  }
}

.intro {
  font-size: $fs-1;
}

.partners-footer {}

